<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">御泥坊</string>
    <string name="sousuo">搜索</string>
    <string name="action_settings">Settings</string>
    <string name="home_title">御泥坊VIP商城</string>
    <string name="tabhome">首页</string>
    <string name="tabclassfiy">分类</string>
    <string name="tabshopping">购物车</string>
    <string name="tabuser">个人中心</string>
    <string name="login">登录</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="w_pay">待付款</string>
    <string name="w_send">待发送</string>
    <string name="w_receive">待收货</string>
    <string name="home_sign_board">每日签到</string>
    <string name="rating">收藏</string>
    <string name="home_ntegral">积分商城</string>
    <string name="home_conversion">兑换专区</string>
    <string name="home_check">真伪查询</string>
    <string name="w_evaluate">待评价</string>
    <string name="w_refund">退款</string>
    <string name="title_activity_productdetails">ProductdetailsActivity</string>
    <string name="Productdetails">商品详情</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="shopping_title">购物车</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="more_title">全部商品</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_zx">ZXActivity</string>

</resources>