<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity" >

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d7cbcb" />

    <RadioGroup
        android:id="@+id/tab_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/tab_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/tabhome_selector"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/tabhome"
            android:textColor="@color/tab_selector_tv_color" />

        <RadioButton
            android:id="@+id/tab_classify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/classify_selector"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/tabclassfiy"
            android:textColor="@color/tab_selector_tv_color" />

        <RadioButton
            android:id="@+id/tab_shop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/shopping_selector"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/tabshopping"
            android:textColor="@color/tab_selector_tv_color" />

        <RadioButton
            android:id="@+id/tab_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/user_selector"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/tabuser"
            android:textColor="@color/tab_selector_tv_color" />
    </RadioGroup>

</LinearLayout>