<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/user_center_bg" >

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/user_icon_default" />

            <ImageView
                android:id="@+id/user_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/user_setting" />
        </RelativeLayout>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text=""
            android:textColor="#a3a5a5" />

        <Button
            android:id="@+id/signorlogin"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_btn_bg"
            android:text="@string/login"
            android:textColor="#5ddeca" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/user_d_pay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/d_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/wait_pay" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/d_pay"
                    android:layout_centerHorizontal="true"
                    android:text="@string/w_pay"
                    android:textColor="#9c9c9c" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/user_d_send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/d_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/wait_send_good" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/d_send"
                    android:layout_centerHorizontal="true"
                    android:text="@string/w_send"
                    android:textColor="#9c9c9c" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/user_d_receive_good"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/d_receive_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/wait_receive_good" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/d_receive_good"
                    android:layout_centerHorizontal="true"
                    android:text="@string/w_receive"
                    android:textColor="#9c9c9c" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/user_d_evaluate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/d_evaluate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/wait_evaluate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/d_evaluate"
                    android:layout_centerHorizontal="true"
                    android:text="@string/w_evaluate"
                    android:textColor="#9c9c9c" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/user_d_refund"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/d_refund"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/wait_refund" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/d_refund"
                    android:layout_centerHorizontal="true"
                    android:text="@string/w_refund"
                    android:textColor="#9c9c9c" />
            </RelativeLayout>
        </LinearLayout>

        <com.bwie.ynf.view.MyListview
            android:id="@+id/user_lv_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:focusable="false" >
        </com.bwie.ynf.view.MyListview>
    </LinearLayout>

</ScrollView>