<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ffffff" >

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/home_title"
            android:textColor="#fc6b87"
            android:textSize="20dp" >
        </TextView>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/home_scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="false"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <com.bwie.ynf.view.ChildViewPager
                    android:id="@+id/home_pager1"
                    android:layout_width="fill_parent"
                    android:layout_height="150.0dip"
                    android:focusable="true" />

                <RadioGroup
                    android:id="@+id/pager_radiogroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/home_pager1"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5.0dip" >

                <RelativeLayout
                    android:id="@+id/home_sign_board"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" >

                    <ImageView
                        android:id="@+id/home_signimg_1"
                        android:layout_width="50.0dip"
                        android:layout_height="50.0dip"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/chat_photo_album" />

                    <TextView
                        android:id="@+id/textview1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/home_signimg_1"
                        android:layout_centerHorizontal="true"
                        android:text="@string/home_sign_board"
                        android:textColor="#ff9c9c9c" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/home_ntegral"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" >

                    <ImageView
                        android:id="@+id/home_signimg_2"
                        android:layout_width="50.0dip"
                        android:layout_height="50.0dip"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/chat_photo_album" />

                    <TextView
                        android:id="@+id/textview2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/home_signimg_2"
                        android:layout_centerHorizontal="true"
                        android:text="@string/home_ntegral"
                        android:textColor="#ff9c9c9c" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/home_conversion"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" >

                    <ImageView
                        android:id="@+id/home_signimg_3"
                        android:layout_width="50.0dip"
                        android:layout_height="50.0dip"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/chat_photo_album" />

                    <TextView
                        android:id="@+id/textview3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/home_signimg_3"
                        android:layout_centerHorizontal="true"
                        android:text="@string/home_conversion"
                        android:textColor="#ff9c9c9c" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/home_check"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" >

                    <ImageView
                        android:id="@+id/home_signimg_4"
                        android:layout_width="50.0dip"
                        android:layout_height="50.0dip"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/chat_photo_album" />

                    <TextView
                        android:id="@+id/textview4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/home_signimg_4"
                        android:layout_centerHorizontal="true"
                        android:text="@string/home_check"
                        android:textColor="#ff9c9c9c" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/zero_lottery"
                    android:layout_width="fill_parent"
                    android:layout_height="200.0dip"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1.0" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1.0"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/newbie_vip"
                        android:layout_width="fill_parent"
                        android:layout_height="100.0dip" />

                    <ImageView
                        android:id="@+id/vip_equity"
                        android:layout_width="fill_parent"
                        android:layout_height="100.0dip" />
                </LinearLayout>
            </LinearLayout>

            <com.bwie.ynf.view.MyListview
                android:id="@+id/home_goods_lv_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

            <RelativeLayout
                android:id="@+id/moregood"
                android:layout_width="match_parent"
                android:layout_height="30dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="查看更多商品"
                    android:textColor="#c9c9c9" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>